# f-hone

./: .gitignore  README.md  pyproject.toml
config/: compiler_construct_map.yaml
deploy/staging/: SOAK_RUNBOOK.md  dogfood_v02.fw  fd.service  fd.yaml  hone-soak-summary.sh  hone-soak.service
deploy/systemd/: hone-soak.service  hone-soak.timer
docker/: docker-compose.yml
docs/: F_SECURITY_HARNESS.md  HONE_REPO_DESIGN.md  HONE_SELF_IMPROVEMENT.md
harness/: __init__.py  cli.py
harness/agents/: __init__.py  abstractor.py  critic.py  features.py  pod.py
harness/calibration/: __init__.py  engine.py
harness/clustering/: __init__.py
harness/controller/: __init__.py
harness/coverage/: __init__.py
harness/diff_sensitivity/: __init__.py  engine.py
harness/knowledge/: __init__.py  reader.py  types.py  writer.py
harness/mutation/: __init__.py  engine.py  types.py
harness/oracles/: __init__.py  bpf_runner.py  fwl_subprocess.py  interpreter.py
harness/prompt_evolution/: __init__.py
harness/reporting/: __init__.py  console.py  stats.py
harness/retrieval/: __init__.py  indexer.py  solr_client.py
harness/scheduling/: __init__.py  registry.py
harness/strategies/: __init__.py  boundary_probing.py  checksum_verify.py  common.py  cross_family_nat.py  oracle_divergence.py  pipeline_equivalence.py  runner.py
harness/transfer/: __init__.py  engine.py
scripts/: hone-soak.sh  setup_solr.sh
tests/: test_calibration.py  test_diff_sensitivity.py  test_knowledge.py  test_mutation.py  test_oracles.py  test_scheduling.py  test_stats.py  test_transfer.py
(+3 files in other folders)
